# ecoindex_python_fullstack

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  Taskfile.yml  ecoindex_0.csv  ecoindex_1.csv  joinned_ecoindex_https-federiconavarrete-com.csv  joinned_ecoindex_https-www-graphic-sud-com.csv  pyproject.toml  workspace.toml
.devcontainer/: devcontainer.json
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  new-feature.yml
.github/workflows/: api_build_publish.yml  api_build_publish_docker_hub.yml  build_publish.yml  build_publish_api.yml  build_publish_cli.yml  build_publish_compute.yml  build_publish_scraper.yml  cli_build_publish.yml  cli_build_publish_docker_hub.yml  compute_build_publish.yml  pr_validation.yml  quality_check.yml  scraper_build_publish.yml  stale.yml  test_changelog.yml
.github/workflows/cli/: build_publish_docker_hub.yml
bases/ecoindex/backend/: VERSION  __init__.py  main.py
bases/ecoindex/backend/dependencies/: __init__.py  bff.py  compute.py  dates.py  host.py  id.py  pagination.py  validation.py  version.py
bases/ecoindex/backend/middlewares/: cors.py  exception_handler.py
bases/ecoindex/backend/models/: parameters.py
bases/ecoindex/backend/models/dependencies_parameters/: bff.py  compute.py  dates.py  host.py  id.py  pagination.py  version.py
bases/ecoindex/backend/routers/: __init__.py  bff.py  compute.py  ecoindex.py  health.py  host.py  tasks.py
bases/ecoindex/backend/scripts/: openapi.py  sync_api_version.py
bases/ecoindex/backend/services/: cache.py  ecoindex.py
bases/ecoindex/backend/utils/: __init__.py
bases/ecoindex/cli/: __init__.py  app.py  arguments_handler.py  console_output.py  crawl.py  helper.py  report.py  sitemap.py
bases/ecoindex/worker/: __init__.py  health.py  tasks.py
components/ecoindex/compute/: VERSION  __init__.py  ecoindex.py
components/ecoindex/config/: __init__.py  settings.py
components/ecoindex/data/: __init__.py  colors.py  grades.py  medians.py  quantiles.py  targets.py
components/ecoindex/database/: __init__.py  engine.py  helper.py
components/ecoindex/database/exceptions/: quota.py
components/ecoindex/database/models/: __init__.py
components/ecoindex/database/repositories/: ecoindex.py  host.py  worker.py
components/ecoindex/exceptions/: scraper.py
components/ecoindex/models/: __init__.py  api.py  cli.py  compute.py  enums.py  parameters.py  response_examples.py  scraper.py  tasks.py
components/ecoindex/scraper/: __init__.py  helper.py  scrap.py  user_agent.py
components/ecoindex/scripts/: __init__.py  update_compute_version.py  update_values.py
components/ecoindex/utils/: __init__.py  files.py  mimetype.py  screenshots.py  sync_version.py
components/ecoindex/worker_component/: __init__.py
development/: ecoindex_compute.py  ecoindex_scraper.py  save_db.py  scraper.py  scraper_test.py  ui.py
projects/ecoindex_api/: .dockerignore  .env.template  .gitignore  README.md  Taskfile.yml  alembic.ini  docker-compose.override.yml.dist  docker-compose.yml  docker-compose.yml.template  openapi.json  pyproject.toml
projects/ecoindex_api/alembic/: env.py
projects/ecoindex_api/alembic/versions/: 5afa2faea43f_.py  7eaafaa65b32_update_url_field_type_to_text.py  826abb0c4222_add_ecoindex_version_field.py  e83263a5def4_add_index_id_and_host.py  fd9a1f5662c8_first_migration.py
projects/ecoindex_api/docker/backend/: dockerfile  entrypoint.sh
projects/ecoindex_api/docker/worker/: dockerfile  entrypoint.sh
projects/ecoindex_cli/: .dockerignore  README.md  Taskfile.yml  dockerfile  pyproject.toml
projects/ecoindex_compute/: README.md  Taskfile.yml  pyproject.toml
projects/ecoindex_scraper/: README.md  Taskfile.yml  dockerfile  pyproject.toml
tasks/: DockerTaskfile.yml  PoetryTaskfile.yml  PypiTaskFile.yml  QualityTaskFile.yml
test/bases/ecoindex/backend/: test_core.py
test/bases/ecoindex/cli/: test_app.py  test_arguments_handler.py  test_core.py  test_helper.py
test/bases/ecoindex/worker/: test_core.py
test/components/ecoindex/compute/: test_ecoindex.py  test_models.py
test/components/ecoindex/models/: test_scraper.py
test/components/ecoindex/scraper/: test_scraper.py
test/components/ecoindex/utils/: test_mimetype.py
