[tool.poetry]
name = "ecoindex-monorepo"
version = "0.1.0"
description = ""
authors = ["Vincent Vatelot <vincent.vatelot@ik.me>"]
readme = "README.md"
packages = [
    { include = "development" },
    { include = "ecoindex/compute", from = "components" },
    { include = "ecoindex/models", from = "components" },
    { include = "ecoindex/data", from = "components" },
    { include = "ecoindex/worker", from = "bases" },
    { include = "ecoindex/backend", from = "bases" },
    { include = "ecoindex/cli", from = "bases" },
    { include = "ecoindex/scripts", from = "components" },
    { include = "ecoindex/scraper", from = "components" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
aiofile = "^3.8.8"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.1"
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
update-values = "ecoindex.scripts:update_values"
