[tool.poetry]
name = "ecoindex_api"
version = "0.1.0"
description = ""
authors = ['Vincent Vatelot <vincent.vatelot@ik.me>']
license = ""

packages = [
    { include = "ecoindex/backend", from = "../../bases" },
    { include = "ecoindex/compute", from = "../../components" },
    { include = "ecoindex/data", from = "../../components" },
    { include = "ecoindex/models", from = "../../components" },
    { include = "ecoindex/scraper", from = "../../components" },
    { include = "ecoindex/scripts", from = "../../components" },
    { include = "ecoindex/utils", from = "../../components" },
    { include = "ecoindex/worker", from = "../../bases" },
]

[tool.poetry.dependencies]
python = "^3.10"
aiofile = "^3.8.8"
pillow = "^10.1.0"
playwright = "^1.39.0"
playwright-stealth = "^1.0.6"
pydantic = "^2.4.2"
requests = "^2.31.0"
slugify = "^0.0.1"
typing-extensions = "^4.8.0"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
