[tool.poetry]
name = "ecoindex_api"
version = "3.7.0"
description = "REST API to expose Ecoindex"
authors = ['Vincent Vatelot <vincent.vatelot@ik.me>']
license = "Creative Commons BY-NC-ND"
homepage = "http://www.ecoindex.fr"
repository = "https://github.com/cnumr/ecoindex_api"
include = ["LICENSE"]

packages = [
    { include = "ecoindex/backend", from = "../../bases" },
    { include = "ecoindex/compute", from = "../../components" },
    { include = "ecoindex/config", from = "../../components" },
    { include = "ecoindex/data", from = "../../components" },
    { include = "ecoindex/database", from = "../../components" },
    { include = "ecoindex/exceptions", from = "../../components" },
    { include = "ecoindex/models", from = "../../components" },
    { include = "ecoindex/scraper", from = "../../components" },
    { include = "ecoindex/utils", from = "../../components" },
    { include = "ecoindex/worker_component", from = "../../components" },
    { include = "ecoindex/worker", from = "../../bases" },
]

[tool.poetry.dependencies]
aiofile = "^3.8.8"
alembic = "^1.12.1"
celery = "^5.3.4"
fastapi = "^0.109.1"
pillow = "^10.3.0"
playwright = "^1.39.0"
playwright-stealth = "^1.0.6"
pydantic = { version = ">=2.1.1,<=2.4.2", extras = ["email"] }
pydantic-settings = "^2.0.3"
python = "^3.10"
pyyaml = "^6.0.1"
redis = "^5.0.1"
requests = "^2.32.2"
sqlmodel = "^0.0.14"
sentry-sdk = "^2.8.0"

[tool.poetry.group.backend.dependencies]
uvicorn = "^0.23.2"

[tool.poetry.group.worker.dependencies]
pillow = "^10.3.0"
playwright = "^1.39.0"
playwright-stealth = "^1.0.6"

[tool.poetry.group.dev.dependencies]
typing-extensions = "^4.8.0"
aiosqlite = "^0.19.0"
watchdog = "^3.0.0"

[tool.poetry.scripts]
update-openapi = "ecoindex.backend.scripts.openapi:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
