[tool.poetry]
name = "ecoindex_cli"
version = "0.1.0"
description = ""
authors = ['Vincent Vatelot <vincent.vatelot@ik.me>']
license = ""

packages = [
    { include = "ecoindex/cli", from = "../../bases" },
    { include = "ecoindex/compute", from = "../../components" },
    { include = "ecoindex/data", from = "../../components" },
    { include = "ecoindex/models", from = "../../components" },
    { include = "ecoindex/scraper", from = "../../components" },
    { include = "ecoindex/scripts", from = "../../components" },
    { include = "ecoindex/utils", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
