[tool.poetry]
name = "ecoindex_cli"
version = "2.23.0"
description = "`ecoindex-cli` is a CLI tool that let you make ecoindex tests on given pages"
authors = ['Vincent Vatelot <vincent.vatelot@ik.me>']
license = "Creative Commons BY-NC-ND"
homepage = "http://www.ecoindex.fr"
repository = "https://github.com/cnumr/ecoindex_cli"
include = ["LICENSE"]
packages = [
    { include = "ecoindex/cli", from = "../../bases" },
    { include = "ecoindex/compute", from = "../../components" },
    { include = "ecoindex/data", from = "../../components" },
    { include = "ecoindex/exceptions", from = "../../components" },
    { include = "ecoindex/models", from = "../../components" },
    { include = "ecoindex/scraper", from = "../../components" },
    { include = "ecoindex/utils", from = "../../components" },
]

[tool.poetry.dependencies]
aiofile = "^3.8.8"
click-spinner = "^0.1.10"
jinja2 = "^3.1.2"
loguru = "^0.7.2"
matplotlib = "^3.8.0"
pandas = "^2.1.2"
playwright = "^1.39.0"
playwright-stealth = "^1.0.6"
pydantic = "^2.4.2"
python = ">=3.10,<3.13"
pyyaml = "^6.0.1"
rich = "^13.6.0"
scrapy = "^2.11.0"
slugify = "^0.0.1"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
