[tool.poetry]
name = "ecoindex_compute"
version = "5.8.0a0"
readme = "README.md"
description = "Ecoindex module provides a simple way to measure the Ecoindex score based on the 3 parameters: The DOM elements of the page, the size of the page and the number of external requests of the page"
authors = ['Vincent Vatelot <vincent.vatelot@ik.me>']
license = "Creative Commons BY-NC-ND"
homepage = "http://www.ecoindex.fr"
repository = "https://github.com/cnumr/ecoindex_python"
include = ["LICENSE"]

packages = [
    { include = "ecoindex/compute", from = "../../components" },
    { include = "ecoindex/data", from = "../../components" },
    { include = "ecoindex/models", from = "../../components" },
]

[tool.poetry.dependencies]
aiofile = "^3.8.8"
pydantic = "^2.4.2"
python = "^3.10"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
