[tool.poetry]
name = "ecoindex_scraper"
version = "0.1.0"
readme = "README.md"
description = "Ecoindex_scraper module provides a way to scrape data from given website while simulating a real web browser"
authors = ['Vincent Vatelot <vincent.vatelot@ik.me>']
license = "Creative Commons BY-NC-ND"
homepage = "http://www.ecoindex.fr"
repository = "https://github.com/cnumr/ecoindex_scrap_python"
include = ["LICENSE"]

packages = [
    { include = "ecoindex/compute", from = "../../components" },
    { include = "ecoindex/data", from = "../../components" },
    { include = "ecoindex/models", from = "../../components" },
    { include = "ecoindex/scraper", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
